specLang_draft1Parser.py
# Generated from specLang_draft1.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class specLang_draft1Parser ( Parser ):

    grammarFileName = "specLang_draft1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'('", "')'", "'`'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'BEGIN'", "'MESSAGE'", "'LABEL'", "'TITLE'", 
                     "'FIND'", "'WHERE'", "'WITHIN'", "'IF'", "'NEVER'", 
                     "'NOT'", "'FOUND'", "'GENTLY'", "'GIVE'", "'NO'", "'FEEDBACK'", 
                     "'END'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMA", "WORDS", "WORDS_NO_COMMA", "WORDS_NO_HASH", 
                      "WORD", "CODE", "WHITESPACE", "BEGIN", "MESSAGE", 
                      "LABEL", "TITLE", "FIND", "WHERE", "WITHIN", "IF", 
                      "NEVER", "NOT", "FOUND", "GENTLY", "GIVE", "NO", "FEEDBACK", 
                      "END" ]

    RULE_document = 0
    RULE_statement = 1
    RULE_comment = 2
    RULE_beginpart = 3
    RULE_parameterpart = 4
    RULE_messagespart = 5
    RULE_messagepart = 6
    RULE_labelpart = 7
    RULE_titlepart = 8
    RULE_findpart = 9
    RULE_wherepart = 10
    RULE_withinpart = 11
    RULE_ifpart = 12
    RULE_feedbackpart = 13

    ruleNames =  [ "document", "statement", "comment", "beginpart", "parameterpart", 
                   "messagespart", "messagepart", "labelpart", "titlepart", 
                   "findpart", "wherepart", "withinpart", "ifpart", "feedbackpart" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    COMMA=5
    WORDS=6
    WORDS_NO_COMMA=7
    WORDS_NO_HASH=8
    WORD=9
    CODE=10
    WHITESPACE=11
    BEGIN=12
    MESSAGE=13
    LABEL=14
    TITLE=15
    FIND=16
    WHERE=17
    WITHIN=18
    IF=19
    NEVER=20
    NOT=21
    FOUND=22
    GENTLY=23
    GIVE=24
    NO=25
    FEEDBACK=26
    END=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(specLang_draft1Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draft1Parser.StatementContext)
            else:
                return self.getTypedRuleContext(specLang_draft1Parser.StatementContext,i)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = specLang_draft1Parser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.statement()
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 29
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 32 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==specLang_draft1Parser.WHITESPACE):
                        break

                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.T__0 or _la==specLang_draft1Parser.BEGIN):
                    break

            self.state = 38
            self.match(specLang_draft1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def beginpart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.BeginpartContext,0)


        def messagespart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.MessagespartContext,0)


        def findpart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.FindpartContext,0)


        def END(self):
            return self.getToken(specLang_draft1Parser.END, 0)

        def comment(self):
            return self.getTypedRuleContext(specLang_draft1Parser.CommentContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = specLang_draft1Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [specLang_draft1Parser.BEGIN]:
                self.state = 40
                self.beginpart()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==specLang_draft1Parser.WHITESPACE:
                    self.state = 41
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.messagespart()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==specLang_draft1Parser.WHITESPACE:
                    self.state = 48
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.findpart()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==specLang_draft1Parser.WHITESPACE:
                    self.state = 55
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 61
                self.match(specLang_draft1Parser.END)
                pass
            elif token in [specLang_draft1Parser.T__0]:
                self.state = 63
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORDS_NO_HASH(self):
            return self.getToken(specLang_draft1Parser.WORDS_NO_HASH, 0)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = specLang_draft1Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(specLang_draft1Parser.T__0)
            self.state = 67
            self.match(specLang_draft1Parser.WORDS_NO_HASH)
            self.state = 68
            self.match(specLang_draft1Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(specLang_draft1Parser.BEGIN, 0)

        def WORD(self):
            return self.getToken(specLang_draft1Parser.WORD, 0)

        def parameterpart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.ParameterpartContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_beginpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginpart" ):
                listener.enterBeginpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginpart" ):
                listener.exitBeginpart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginpart" ):
                return visitor.visitBeginpart(self)
            else:
                return visitor.visitChildren(self)




    def beginpart(self):

        localctx = specLang_draft1Parser.BeginpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_beginpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(specLang_draft1Parser.BEGIN)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 76
            self.match(specLang_draft1Parser.WORD)
            self.state = 77
            self.match(specLang_draft1Parser.T__1)
            self.state = 78
            self.parameterpart()
            self.state = 79
            self.match(specLang_draft1Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WORD)
            else:
                return self.getToken(specLang_draft1Parser.WORD, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.COMMA)
            else:
                return self.getToken(specLang_draft1Parser.COMMA, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_parameterpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterpart" ):
                listener.enterParameterpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterpart" ):
                listener.exitParameterpart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterpart" ):
                return visitor.visitParameterpart(self)
            else:
                return visitor.visitChildren(self)




    def parameterpart(self):

        localctx = specLang_draft1Parser.ParameterpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(specLang_draft1Parser.WORD)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==specLang_draft1Parser.COMMA or _la==specLang_draft1Parser.WHITESPACE:
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==specLang_draft1Parser.WHITESPACE:
                    self.state = 82
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(specLang_draft1Parser.COMMA)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==specLang_draft1Parser.WHITESPACE:
                    self.state = 89
                    self.match(specLang_draft1Parser.WHITESPACE)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 95
                self.match(specLang_draft1Parser.WORD)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessagespartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def messagepart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.MessagepartContext,0)


        def labelpart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.LabelpartContext,0)


        def titlepart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.TitlepartContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_messagespart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagespart" ):
                listener.enterMessagespart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagespart" ):
                listener.exitMessagespart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessagespart" ):
                return visitor.visitMessagespart(self)
            else:
                return visitor.visitChildren(self)




    def messagespart(self):

        localctx = specLang_draft1Parser.MessagespartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_messagespart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.messagepart()
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 107
            self.labelpart()
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 113
            self.titlepart()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MessagepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MESSAGE(self):
            return self.getToken(specLang_draft1Parser.MESSAGE, 0)

        def WORDS(self):
            return self.getToken(specLang_draft1Parser.WORDS, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_messagepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMessagepart" ):
                listener.enterMessagepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMessagepart" ):
                listener.exitMessagepart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessagepart" ):
                return visitor.visitMessagepart(self)
            else:
                return visitor.visitChildren(self)




    def messagepart(self):

        localctx = specLang_draft1Parser.MessagepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_messagepart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(specLang_draft1Parser.MESSAGE)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 121
            self.match(specLang_draft1Parser.T__3)
            self.state = 122
            self.match(specLang_draft1Parser.WORDS)
            self.state = 123
            self.match(specLang_draft1Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(specLang_draft1Parser.LABEL, 0)

        def WORDS(self):
            return self.getToken(specLang_draft1Parser.WORDS, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_labelpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelpart" ):
                listener.enterLabelpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelpart" ):
                listener.exitLabelpart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelpart" ):
                return visitor.visitLabelpart(self)
            else:
                return visitor.visitChildren(self)




    def labelpart(self):

        localctx = specLang_draft1Parser.LabelpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_labelpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(specLang_draft1Parser.LABEL)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 131
            self.match(specLang_draft1Parser.T__3)
            self.state = 132
            self.match(specLang_draft1Parser.WORDS)
            self.state = 133
            self.match(specLang_draft1Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitlepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(specLang_draft1Parser.TITLE, 0)

        def WORDS(self):
            return self.getToken(specLang_draft1Parser.WORDS, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_titlepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitlepart" ):
                listener.enterTitlepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitlepart" ):
                listener.exitTitlepart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitlepart" ):
                return visitor.visitTitlepart(self)
            else:
                return visitor.visitChildren(self)




    def titlepart(self):

        localctx = specLang_draft1Parser.TitlepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_titlepart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(specLang_draft1Parser.TITLE)
            self.state = 137 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 136
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 141
            self.match(specLang_draft1Parser.T__3)
            self.state = 142
            self.match(specLang_draft1Parser.WORDS)
            self.state = 143
            self.match(specLang_draft1Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FindpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(specLang_draft1Parser.FIND, 0)

        def CODE(self):
            return self.getToken(specLang_draft1Parser.CODE, 0)

        def ifpart(self):
            return self.getTypedRuleContext(specLang_draft1Parser.IfpartContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def wherepart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draft1Parser.WherepartContext)
            else:
                return self.getTypedRuleContext(specLang_draft1Parser.WherepartContext,i)


        def withinpart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(specLang_draft1Parser.WithinpartContext)
            else:
                return self.getTypedRuleContext(specLang_draft1Parser.WithinpartContext,i)


        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_findpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFindpart" ):
                listener.enterFindpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFindpart" ):
                listener.exitFindpart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFindpart" ):
                return visitor.visitFindpart(self)
            else:
                return visitor.visitChildren(self)




    def findpart(self):

        localctx = specLang_draft1Parser.FindpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_findpart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(specLang_draft1Parser.FIND)
            self.state = 147 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 146
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 149 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 151
            self.match(specLang_draft1Parser.T__3)
            self.state = 152
            self.match(specLang_draft1Parser.CODE)
            self.state = 153
            self.match(specLang_draft1Parser.T__3)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==specLang_draft1Parser.WHERE or _la==specLang_draft1Parser.WITHIN:
                self.state = 166
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [specLang_draft1Parser.WHERE]:
                    self.state = 154
                    self.wherepart()
                    self.state = 156 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 155
                        self.match(specLang_draft1Parser.WHITESPACE)
                        self.state = 158 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==specLang_draft1Parser.WHITESPACE):
                            break

                    pass
                elif token in [specLang_draft1Parser.WITHIN]:
                    self.state = 160
                    self.withinpart()
                    self.state = 162 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 161
                        self.match(specLang_draft1Parser.WHITESPACE)
                        self.state = 164 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==specLang_draft1Parser.WHITESPACE):
                            break

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.ifpart()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WherepartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(specLang_draft1Parser.WHERE, 0)

        def WORDS(self):
            return self.getToken(specLang_draft1Parser.WORDS, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_wherepart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWherepart" ):
                listener.enterWherepart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWherepart" ):
                listener.exitWherepart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWherepart" ):
                return visitor.visitWherepart(self)
            else:
                return visitor.visitChildren(self)




    def wherepart(self):

        localctx = specLang_draft1Parser.WherepartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_wherepart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(specLang_draft1Parser.WHERE)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 174
                self.match(specLang_draft1Parser.WHITESPACE)
                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==specLang_draft1Parser.WHITESPACE):
                    break

            self.state = 179
            self.match(specLang_draft1Parser.T__3)
            self.state = 180
            self.match(specLang_draft1Parser.WORDS)
            self.state = 181
            self.match(specLang_draft1Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithinpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITHIN(self):
            return self.getToken(specLang_draft1Parser.WITHIN, 0)

        def WORD(self):
            return self.getToken(specLang_draft1Parser.WORD, 0)

        def FIND(self):
            return self.getToken(specLang_draft1Parser.FIND, 0)

        def CODE(self):
            return self.getToken(specLang_draft1Parser.CODE, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(specLang_draft1Parser.WHITESPACE)
            else:
                return self.getToken(specLang_draft1Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return specLang_draft1Parser.RULE_withinpart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithinpart" ):
                listener.enterWithinpart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithinpart" ):
                listener.exitWithinpart(self)
